<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/your_score"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/green_text"
        android:id="@+id/textView9" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_circle"
        android:text="1"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:id="@+id/scoreTextView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_level"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_blue_round"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/netLevelButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_blue_round"
        android:text="@string/try_again"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/tryAgainButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_blue_round"
        android:textStyle="bold"
        android:id="@+id/resultCancelButton" />
</LinearLayout>
