<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="android.cp.ay.com.game.activity.HighScoreActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/shadow_bg"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:text="Rank"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="15sp"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/name"
            android:gravity="center"
            android:textSize="15sp"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/score"
            android:gravity="center"
            android:textSize="15sp"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/level"
            android:gravity="center"
            android:textSize="15sp"
            android:id="@+id/textView12" />


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/highScoreListView"
        />


</LinearLayout>
